--- a/assets/css/DarkBlue.css
+++ b/assets/css/DarkBlue.css
@@ -37,9 +37,15 @@ a {
 #profile .col-md-5 h2, #profile .col-md-5 h4, #resume .col-md-6 p, #resume .col-md-6 span.duration {
     color: #3B5998;
 }
-#resume .resume-left ul li h5 {
-    border-bottom: 1px solid #3B5998;
+#resume .resume-bordered-li {
+    border-bottom: 1px solid #e4e4e4;
+    margin-bottom: 10px;
 }
+
+#resume .resume-bordered-li p {
+    margin-bottom: 10px;
+}
+
 .attributes span.glyphicon, .attributes h6 {
     color: #3B5998;
 }
